<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/editDescription"
        app:layout_constraintStart_toStartOf="@+id/editDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="227dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="text|textMultiLine"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <CheckBox
        android:id="@+id/checkBoxIdea"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="16dp"
        android:text="@string/checkbox"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxImportant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/idea_text" />

    <CheckBox
        android:id="@+id/checkBoxTodo"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="71dp"
        android:text="@string/todo_text"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxImportant"
        app:layout_constraintEnd_toEndOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxIdea" />

    <CheckBox
        android:id="@+id/checkBoxImportant"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="142dp"
        android:text="@string/important_text"
        app:layout_constraintBottom_toBottomOf="@+id/btnOK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxIdea" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#F10404"
        android:text="@string/cancel_button"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="#2DC533"
        android:text="@string/ok_button"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>